--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "glslCanvas": "^0.1.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-tooltip": "^3.8.4"
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
