--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emotion": "^9.2.12",
     "glslCanvas": "^0.1.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
+    "react-shader-canvas": "^1.0.0",
     "react-tooltip": "^3.8.4"
   },
   "scripts": {
